# rag-local-ia

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
app/: __init__.py  cli.py  models.py
app/api/: __init__.py  dependencies.py  main.py  schemas.py
app/chunking/: chunker.py
app/core/: __init__.py  config.py  logging.py
app/embeddings/: __init__.py  base.py  sentence_transformers.py
app/indexing/: __init__.py  service.py
app/ingestion/: __init__.py  loaders.py  models.py  scanner.py  service.py
app/llm/: __init__.py  base.py  client.py  prompt_builder.py
app/querying/: __init__.py  service.py
app/rag/: __init__.py  pipeline.py
app/retrieval/: retriever.py
app/vector_store/: __init__.py  base.py  local_store.py
docs/examples/: generated_rag_prompt.md
tests/: __init__.py  test_api.py  test_chunker.py  test_cli.py  test_config.py  test_embeddings.py  test_health.py  test_indexing_service.py  test_ingestion.py  test_llm_client.py  test_models.py  test_prompt_builder.py  test_query_service.py  test_rag_pipeline.py  test_retriever.py  test_vector_store.py
